--- a/style.css
+++ b/style.css
@@ -45,10 +45,15 @@ h2{
     width: 100%;
     height: 100px;
     border-style: dashed;
+    border-width: 3px;
     border-color: #DFD9D7;
     border-radius: 5px;
     padding: 5px 5px;
     overflow:auto;
+}
+
+textarea{
+    resize: none;
 }
 #result{
     color:#727375;
